test/conformance/chainsaw/validating-policies/report/skip-reports/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: skip-reports
spec:
  steps:
  - name: apply-policies
    try:
    - apply:
        file: policy-with-skip.yaml
    - apply:
        file: policy-without-skip.yaml
  - name: apply-resource
    try:
    - apply:
        file: deployment.yaml
  - name: wait
    try:
    - sleep:
        duration: 10s
